Fixed semester list spacing - still need to fix sandbox

--- a/core/static/core/css/custom.css
+++ b/core/static/core/css/custom.css
@@ -6,6 +6,7 @@
 .topbtm-pad {
 	padding-top: 1em;
 	padding-bottom: 0.5em;
+	padding-right: 3em;
 }
 
 .grid-pad {
@@ -24,6 +25,7 @@
 
 	.grid-item {
 		padding-left: 0 !important;
+		padding-top: 10px;
 	}
 
 .large-icon {
