--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -636,8 +636,8 @@
 			display: inline-block;
 			background: none;
 			border: 2px solid #D8D8D8;
-			height: 8em;
-			width: 12.2em;
+			height: 9em;
+			width: 12.5em;
 			border-radius: 5px;
 			line-height: 1.5em;
 			padding: 0.7em 0.2em 0.7em 1.2em;
@@ -654,11 +654,11 @@
 			background: none;
 			border: 2px solid #57d157;
 			border-style: dashed;
-			height: 8em;
-			width: 12.2em;
+			height: 9em;
+			width: 12.5em;
 			border-radius: 5px;
 			line-height: 1.5em;
-			padding-top: 2.8em;
+			padding-top: 3.3em;
 			color: #57d157;
 			text-decoration: none;
 			font-weight: 300;
